* Fix a crash that can occur when trying to determine if a device is an iPod [1] * Clean up the Podcast locking code to avoid crashes [2] * Fix some warnings pertaining to time_t casts

Reported by:	ahze, Khairil Yusof <kaeru@inigo-tech.com> [1]
Submitted by:	James "Doc" Livingston  [2]
Obtained from:	http://bugzilla.gnome.org/show_bug.cgi?id=337332 [2]